# Flux-cpp

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .license-header.txt  .pre-commit-config.yaml  CLI_IMPLEMENTATION_SUMMARY.md  CLI_IMPLEMENTATION_SUMMARY_EN.md  CMakeLists.txt  CODE_REVIEW_IMPROVEMENTS.md  CODE_REVIEW_REPORT.md  CONTRIBUTING.md  FLUX_GUI_COMPLETE_IMPLEMENTATION.md  GUI_ENHANCEMENT_PLAN.md  GUI_IMPLEMENTATION_SUMMARY.md  GUI_IMPLEMENTATION_SUMMARY_EN.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  INTEGRATION_SUMMARY.md  LICENSE  PRIORITY_TASKS.md  README.md  build.bat  build.sh  build_flux_cli.ps1  build_gui.bat  demo.ps1  demo.sh  flux_demo.html  flux_gui_enhancements_demo.html  my_changes.diff  project_infrastructure_changes.diff  setup_dependencies.ps1  setup_dependencies.sh  test_gui_build.ps1  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md
cmake/: FluxConfig.cmake.in
docs/: CORE_FEATURE_MATRIX.md
docs/appdir/: AppRun
docs/guides/: BUILD_GUIDE.md
docs/implementation/: IMPLEMENTATION_COMPLETION_FINAL.md  MODERNIZATION_COMPLETE.md
docs/screenshots/: README.md
docs/summaries/: CODE_QUALITY_OPTIMIZATION_COMPLETE.md  GUI_REFACTORING_SUMMARY.md  IMPLEMENTATION_COMPLETION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  (+4 more)
flux-cli/: CMakeLists.txt
flux-cli/src/: cli_app.cpp  cli_app.h  main.cpp  version.h.in
flux-cli/src/application/: cli_app.cpp
flux-cli/src/commands/: auto_command.cpp  auto_command.h  batch_command.cpp  batch_command.h  extract_command.cpp  extract_command.h  info_command.cpp  inspect_command.cpp  inspect_command.h  list_command.cpp  pack_command.cpp  pack_command.h  smart_command.cpp  smart_command.h  verify_command.cpp
flux-cli/src/commands/handlers/: operation_detector.cpp  operation_detector.h  smart_executor.cpp  smart_executor.h
flux-cli/src/platform/: windows_console.cpp  windows_console.h
flux-cli/src/utils/: file_utils.cpp  file_utils.h  format_utils.cpp  format_utils.h  progress_bar.cpp  progress_bar.h
flux-core/: CMakeLists.txt
flux-core/include/flux-core/: archive.h  compat.h  constants.h  exceptions.h  extractor.h  flux.h  packer.h
flux-core/include/flux-core/error/: error_handling.h
flux-core/include/flux-core/functional/: operations.h  result.h
flux-core/src/: archive_utils.cpp  extractor.cpp  flux.cpp  packer.cpp
flux-core/src/core/: extractor.cpp  flux.cpp
flux-core/src/formats/: sevenzip_extractor_impl.cpp  sevenzip_packer_impl.cpp  tar_extractor.cpp  tar_extractor_impl.cpp  tar_packer_impl.cpp  zip_extractor.cpp  zip_extractor_impl.cpp  zip_extractor_stub.cpp  zip_packer.cpp  zip_packer_impl.cpp
flux-core/src/formats/extractors/: sevenzip_extractor.cpp  tar_extractor.cpp  tar_extractor_impl.cpp  zip_extractor.cpp  zip_extractor_impl.cpp  zip_extractor_stub.cpp
flux-core/src/formats/packers/: sevenzip_packer.cpp  tar_packer.cpp  zip_packer.cpp  zip_packer_impl.cpp
flux-core/src/utils/: format_detector.cpp
flux-core/tests/: CMakeLists.txt  test_archive_utils.cpp  test_extractor.cpp  test_packer.cpp
flux-gui/: CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  README.md  flux-gui.pro
flux-gui/examples/: async_ui_example.cpp
flux-gui/resources/: Info.plist.in  flux-mimetypes.xml  flux.desktop  flux.rc  resources.qrc  simple.qrc  theme.qss
flux-gui/resources/config/: compression-presets.json  default-settings.json  mime-types.json
flux-gui/resources/themes/: dark.qss  enhanced.qss  light.qss
flux-gui/src/: main.cpp  main_window.cpp  mainwindow.h  mainwindow.ui
flux-gui/src/application/: main.cpp
flux-gui/src/core/: async_task_executor.h  async_worker.cpp  async_worker.h  asyncworker.cpp  asyncworker.h  task_executor.cpp  task_executor.h
flux-gui/src/core/archive/: archive_manager.cpp  archive_manager.h
flux-gui/src/core/config/: settings_manager.cpp  settings_manager.h
flux-gui/src/core/theme/: theme_manager.cpp  theme_manager.h
flux-gui/src/examples/: smart_context_menu_example.cpp
flux-gui/src/models/: archive_model.cpp  archive_model.h  virtual_archive_model.cpp  virtual_archive_model.h
flux-gui/src/platform/: system_integration.h
flux-gui/src/ui/: enhanced_main_window.cpp  enhanced_main_window.h  main_window.cpp  main_window.h  modern_main_window.cpp
flux-gui/src/ui/components/: context_menu_manager.cpp  context_menu_manager.h  modern_toolbar.cpp  modern_toolbar.h  operation_dispatcher.h  rich_file_display.cpp  rich_file_display.h  smart_navigation_panel.cpp  smart_navigation_panel.h  smart_status_bar.cpp  smart_status_bar.h  status_bar.cpp  status_bar.h  unified_drop_zone.cpp  unified_drop_zone.h  virtualized_archive_view.cpp  virtualized_archive_view.h  visual_feedback_manager.cpp  visual_feedback_manager.h
flux-gui/src/ui/dialogs/: batch_operations_dialog.cpp  batch_operations_dialog.h  smart_compression_dialog.cpp  smart_compression_dialog.h  smart_extraction_dialog.cpp  smart_extraction_dialog.h
flux-gui/src/ui/managers/: accessibility_manager.cpp  accessibility_manager.h  context_menu_manager.h  keyboard_shortcut_manager.h  theme_manager.cpp  theme_manager.h
flux-gui/src/ui/views/: archive_browser_view.cpp  archive_browser_view.h  modern_welcome_view.h  settings_view.cpp  settings_view.h
flux-gui/src/ui/widgets/: archive_explorer_widget.cpp  archive_explorer_widget.h  compression_widget.cpp  compression_widget.h  extraction_widget.h  settings_widget.h  welcome_widget.cpp  welcome_widget.h
flux-gui/src/ui/windows/: main_window.cpp  main_window.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  modern_main_window.h
flux-gui/src/utils/: file_utils.cpp  file_utils.h  resource_manager.cpp  resource_manager.h
flux-gui/src/views/: browse_page.cpp  browse_page.h  browse_view.cpp  browse_view.h  extract_view.cpp  extract_view.h  pack_view.cpp  pack_view.h  settings_page.cpp  settings_page.h  welcome_view.cpp  welcome_view.h
scripts/: run_quality_checks.ps1  run_quality_checks.sh
(+2 files in other folders)
